Add content::UpdateFontRendererPreferencesFromSystemSettings()

Previously the code that sets font rendering config in RendererPreferences
was duplicated in 2 places. We also need to use that code in webrunner. Added
content::UpdateFontRendererPreferencesFromSystemSettings(). It's now used
in Android WebView, Chrome and webrunner.

Bug: 919254
Change-Id: I5e4cccf9c9996a335fb79ba2b8d7f53eaf7fbc47
Reviewed-on: https://chromium-review.googlesource.com/c/1396843
Commit-Queue: Sergey Ulanov <sergeyu@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Bo <boliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620493}
Former-commit-id: fd5f85adfeb64751772be6dcb594d023c4f9df81